public class Cliente {
    private int  numeroCliente;
    private String  apellido;
    private int  dni;
    private int  cuit;

    // Constructor
    public Cliente(int numeroCliente, String apellido, int dni, int cuit) {
        this.numeroCliente = numeroCliente;
        this.apellido = apellido;
        this.dni = dni;
        this.cuit = cuit;
    }

}
